--- a/starter/index.html
+++ b/starter/index.html
@@ -27,7 +27,7 @@
         </header>
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h1 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h1>
@@ -35,7 +35,16 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, molestiae officiis eos expedita deserunt fugiat earum, distinctio aliquid pariatur dignissimos accusamus.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never had before</h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti ullam et est voluptatem sit explicabo repellat molestiae dicta eum eos.
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         Image Composition
