--- a/starter/index.html
+++ b/starter/index.html
@@ -28,9 +28,9 @@
         <main>
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
-                    <h1 class="heading-secondary">
+                    <h2 class="heading-secondary">
                         Exciting tours for adventurous people
-                    </h1>
+                    </h2>
                 </div>
 
                 <div class="row">
@@ -52,6 +52,72 @@
                             <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
                             <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live healthier</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Most popular tours
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                      <div class="card">
+                        <div class="card__side">
+                            Text
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <!-- <div class="card">
+                            Card Text
+                        </div> -->
+                    </div>
+                    <div class="col-1-of-3">
+                        <!-- <div class="card">
+                            Card Text
+                        </div> -->
                     </div>
                 </div>
             </section>
