--- a/starter/index.html
+++ b/starter/index.html
@@ -216,6 +216,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img class="story__img" src="img/nat-9.jpg" alt="Person on a tour">
+                            <figcaption class="story__caption">
+                                Jack Wilson
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Wow, my life is completely different now!</h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, molestiae officiis eos expedita deserunt fugiat earum, distinctio aliquid pariatur dignissimos accusamus. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn-text">Read All Stories &rarr;</a>
+                  </div>
             </section>
         </main>
         <!--
