--- a/starter/index.html
+++ b/starter/index.html
@@ -243,6 +243,13 @@
                     <a href="#" class="btn btn-text">Read All Stories &rarr;</a>
                   </div>
             </section>
+            <section class="section-book">
+            <div class="row">
+                <div class="book">
+
+                </div>
+            </div>
+        </section>
         </main>
         <!--
         <section class="grid-test">
