--- a/starter/index.html
+++ b/starter/index.html
@@ -326,6 +326,22 @@
             </div>
         </div>
         </footer>
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus sed vulputate odio ut enim blandit volutpat maecenas volutpat. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Fusce id velit ut tortor. Amet facilisis magna etiam tempor orci eu lobortis. Malesuada fames ac turpis egestas sed. Ac ut consequat semper viverra nam. Tempus iaculis urna id volutpat lacus laoreet non curabitur.
+                    </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+            </div>
+        </div>
         <!--
         <section class="grid-test">
             <div class="row">
